Resolved conflict between chat widget and copyright overlay for improved layout alignment.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,8 +86,6 @@
 
 
 
-
-
 /*-----------------------------------*\
   #RESET
 \*-----------------------------------*/
@@ -311,15 +309,6 @@ body {
   object-fit: cover;
 }
 
-.badge {
-  max-width: max-content;
-  background-color: var(--hoockers-green);
-  color: var(--white);
-  font-weight: var(--fw-700);
-  padding-inline: 12px;
-  border-radius: var(--radius-3);
-}
-
 .flex-list {
   display: flex;
   flex-wrap: wrap;
@@ -406,8 +395,6 @@ body {
 .nav-open-btn .line-1 { width: 15px; }
 
 .nav-open-btn .line-3 { width: 18px; }
-
-
 
 
 
@@ -512,8 +499,6 @@ body {
 
 
 
-
-
 /*-----------------------------------*\
   #COLLECTION
 \*-----------------------------------*/
@@ -585,7 +570,6 @@ body {
   #FOOTER
 \*-----------------------------------*/
 
-.footer .logo { display: none; }
 
 .footer {
   background-color: var(--cultured-1);
@@ -604,6 +588,13 @@ body {
   margin-block-end: 20px;
 }
 
+.footer-bottom {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--cultured-1);
+}
+
 .footer-list {
   text-align: center;
   padding: 0 10px; /* Reduce overall padding */
@@ -615,8 +606,6 @@ body {
   font-weight: var(--fw-600);
   margin-block-end: 10px;
 }
-
-
 
 .footer-link {
   font-size: var(--fs-7);
@@ -632,22 +621,6 @@ body {
   font-size: var(--fs-7); 
   color: var(--black);
 }
-
-
-.footer-bottom .wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  gap: 10px;
-  margin-block-end: 20px;
-}
-
-.footer-bottom > img { max-width: max-content; }
-
-
-
-
 
 /*-----------------------------------*\
   #BACK TO TOP
@@ -679,8 +652,6 @@ body {
   visibility: visible;
   transform: translateY(-10px);
 }
-
-
 
 
 
@@ -719,7 +690,6 @@ body {
     max-width: 540px;
     width: 100%;
     margin-inline: auto;
-    display: flex;
     flex-direction: column;
     align-items: center;
   }
@@ -834,21 +804,9 @@ body {
     grid-column: 1 / 4;
   }
 
-  .footer-bottom {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 20px;
-  }
+  
 
-  .footer-bottom .wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 15px;
-    margin-block-end: 20px;
-  }
+
 }
 
 /*=====================================================================
